--- a/footer.html
+++ b/footer.html
@@ -18,10 +18,10 @@
                 <i class="fa fa-facebook"></i> NEWS LIVE coverage
             </a>
             <a href="https://www.facebook.com/?next=https%3A%2F%2Fm.facebook.com%2Fstory.php%3Fstory_fbid%3D3836862793258122%26id%3D100008033171309&_rdr" target="_blank">
-                <i class="fa fa-facebook"></i> Facebook Story 2
+                <i class="fa fa-facebook"></i> News Daily 24 coverage
             </a>
             <a href="https://www.facebook.com/story.php?story_fbid=927490626063008&id=100064062369322&_rdr" target="_blank">
-                <i class="fa fa-facebook"></i> News Daily 24
+                <i class="fa fa-facebook"></i> Gorkhali Colours coverage
             </a>
         </div>
 
