--- a/footer.html
+++ b/footer.html
@@ -5,21 +5,19 @@
         <p>Check out my interviews and social media presence:</p>
 
         <div class="social-icons">
+            <!-- YouTube Link -->
             <a href="https://www.youtube.com/watch?app=desktop&v=854QCf_DwPU" target="_blank">
-                <i class="fa fa-youtube-play"></i> News Live coverage
+                <i class="fa fa-youtube-play"></i> News Live Coverage
             </a>
+            <!-- Facebook Links -->
             <a href="https://www.facebook.com/assamtalkslive/videos/326320497208984/" target="_blank">
-                <i class="fa fa-facebook"></i> ASSAM TALKS LIVE coverage
-            </a>
-        </div>
-
-       
+                <i class="fa fa-facebook"></i> ASSAM TALKS LIVE Coverage
             </a>
             <a href="https://www.facebook.com/?next=https%3A%2F%2Fm.facebook.com%2Fstory.php%3Fstory_fbid%3D3836862793258122%26id%3D100008033171309&_rdr" target="_blank">
-                <i class="fa fa-facebook"></i> News Daily 24 coverage
+                <i class="fa fa-facebook"></i> News Daily 24 Coverage
             </a>
             <a href="https://www.facebook.com/story.php?story_fbid=927490626063008&id=100064062369322&_rdr" target="_blank">
-                <i class="fa fa-facebook"></i> Gorkhali Colours coverage
+                <i class="fa fa-facebook"></i> Gorkhali Colours Coverage
             </a>
         </div>
 
