--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <meta charset="utf-8">
-      <title>Suresh Pokharel</title>
+      <title>Sagar Bhattarai</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!-- <link rel="icon" type="image/png" href="images/logo.png"> -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -29,16 +29,17 @@
             <h3 class="contactTitle text-xs-center">Projects</h3>
             <ul>
                <p>
-               <li>
-                 Scale-invariant feature transform (SIFT) analysis of super-resolution images to assess the quality of images synthetically generated using a generative adversarial network (GAN). <span class="paper-type-journal">master’s thesis</span><a href="http://dx.doi.org/10.13140/RG.2.2.24998.40000" target="_blank"><span class="paper-type-workshop">Read full document</span></a>
-               </li>
+                  <li>
+                     Large scale production of energy from organic solar cell for the utilization in underwater surveillance, from Indian Institute of Technology Guwahati as Principal Investigator, 
+                     <span class="paper-type-journal">Funding: 19 Lakh INR</span>
+                  </li>
                </p>
                <p>
                   <li>
-               Fingerprint-Spoof-Detector-Based-on-LBP-and-HOG<a href="https://github.com/suresh-pokharel/Fingerprint-Spoof-Detector-Based-on-LBP-and-HOG" target="_blank" title = "GitHub"><span class="paper-type-journal conference"><i class="fa fa-github"></i></span></a>
-                     </li>
+                     Development and characterization of CsSnGeI3 based solar cell devices through theoretical and experimental approach, from DST-SERB, Core Research Grant as Co-Principal Investigator, 
+                     <span class="paper-type-journal">Funding: 49 Lakh INR</span>
+                  </li>
                </p>
-             
             </ul>
          </div>
       </div>
