--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Kumar Neupane</title>
+<title>Sagar Bhattarai</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Kumar is a PhD candidate at Michigan Tech working at the intersection of AI, Machine Learning, NLP, and life sciences. His research uses advanced AI techniques to tackle challenges in Bioinformatics. He has developed innovative protein tools, significantly advancing the fields of Computational Biology.">
+<meta name="description" content="Sagar Bhattarai">
 <!-- <link rel="icon" type="image/png" href="images/logo.png"> -->
 
 <link rel="stylesheet" href="css/bootstrap.css">
