--- a/test_page.html
+++ b/test_page.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Suresh Pokharel</title>
+    <title>Sagar Bhattarai</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="icon" type="image/png" href="images/logo.png"> -->
     
