--- a/footer.html
+++ b/footer.html
@@ -1,85 +1,9 @@
-<!-- Footer Section -->
-<footer class="footer">
-    <div class="container">
-        <h3>Media Coverage</h3>
-        <p>Check out my interviews and social media presence:</p>
-
-        <div class="social-icons">
-            <!-- YouTube Link -->
-            <a href="https://www.youtube.com/watch?app=desktop&v=854QCf_DwPU" target="_blank">
-                <i class="fa fa-youtube-play"></i> News Live Coverage
-            </a>
-            <!-- Facebook Links -->
-            <a href="https://www.facebook.com/assamtalkslive/videos/326320497208984/" target="_blank">
-                <i class="fa fa-facebook"></i> ASSAM TALKS LIVE Coverage
-            </a>
-            <a href="https://www.facebook.com/?next=https%3A%2F%2Fm.facebook.com%2Fstory.php%3Fstory_fbid%3D3836862793258122%26id%3D100008033171309&_rdr" target="_blank">
-                <i class="fa fa-facebook"></i> News Daily 24 Coverage
-            </a>
-            <a href="https://www.facebook.com/story.php?story_fbid=927490626063008&id=100064062369322&_rdr" target="_blank">
-                <i class="fa fa-facebook"></i> Gorkhali Colours Coverage
-            </a>
-        </div>
-
-        <p>&copy; 2024 Sagar Bhattarai. All rights reserved.</p>
-    </div>
+<footer class="footer navbar-fixed-bottom">
+  <div class="container">
+    <ul class="list-unstyled footerLink">
+      <!-- <li><a href="about.html">About</a></li> -->
+      <!-- <li><a href="projects.html">Projects</a></li> -->
+    </ul>
+    <p class="copyrightText">&copy; 2024 Sagar Bhattarai</p>
+  </div>
 </footer>
-
-<!-- Footer CSS Styling -->
-<style>
-    .footer {
-        background-color: #f8f9fa; /* Light background */
-        color: #333; /* Dark text for readability */
-        padding: 40px 0;
-        text-align: center;
-        border-top: 1px solid #dee2e6; /* Subtle top border */
-    }
-
-    .footer a {
-        color: #007bff; /* Link color */
-        text-decoration: none;
-        font-weight: bold;
-        margin: 0 15px;
-        transition: color 0.3s ease;
-    }
-
-    .footer a:hover {
-        color: #0056b3; /* Hover color */
-    }
-
-    .footer h3 {
-        font-size: 24px;
-        margin-bottom: 20px;
-        color: #000; /* Darker heading */
-    }
-
-    .social-icons {
-        margin-top: 20px;
-        margin-bottom: 20px;
-    }
-
-    .social-icons a {
-        font-size: 18px;
-        margin: 10px;
-        display: inline-block;
-        color: #007bff;
-        padding: 10px 20px;
-        background-color: #e9ecef;
-        border-radius: 5px;
-        transition: background-color 0.3s ease, color 0.3s ease;
-    }
-
-    .social-icons a:hover {
-        background-color: #007bff;
-        color: #fff; /* Invert text color on hover */
-    }
-
-    .footer p {
-        margin: 20px 0 10px;
-        font-size: 16px;
-    }
-
-    .social-icons i {
-        margin-right: 8px;
-    }
-</style>
