--- a/Media_Coverage.html
+++ b/Media_Coverage.html
@@ -12,6 +12,18 @@
         body {
             font-family: 'Lato', sans-serif;
         }
+
+        /* Header Section */
+        .header {
+            background-color: #f8f9fa;
+            padding: 15px 0;
+            text-align: center;
+            font-size: 24px;
+            font-weight: bold;
+            border-bottom: 2px solid #dee2e6;
+        }
+
+        /* Media Coverage Header */
         .media-coverage-header {
             text-align: center;
             font-size: 28px;
@@ -58,9 +70,37 @@
         .social-icons a:hover {
             color: #0056b3;
         }
+
+        /* Footer Section */
+        .footer {
+            background-color: #f8f9fa;
+            padding: 20px 0;
+            text-align: center;
+            border-top: 2px solid #dee2e6;
+            font-size: 16px;
+        }
+
+        .footer p {
+            margin: 10px 0;
+            color: #333;
+        }
+
+        .footer a {
+            color: #007bff;
+            text-decoration: none;
+        }
+
+        .footer a:hover {
+            color: #0056b3;
+        }
     </style>
 </head>
 <body>
+
+    <!-- Header Section -->
+    <div class="header">
+        Sagar Bhattarai - Media Coverage
+    </div>
 
     <div class="container">
         <!-- Media Coverage Header -->
@@ -92,6 +132,12 @@
             <a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube"></i></a>
             <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
         </div>
+    </div>
+
+    <!-- Footer Section -->
+    <div class="footer">
+        <p>&copy; 2024 Sagar Bhattarai. All rights reserved.</p>
+        <p>Follow me on <a href="https://www.youtube.com" target="_blank">YouTube</a> and <a href="https://www.facebook.com" target="_blank">Facebook</a></p>
     </div>
 
     <!-- Scripts -->
