--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html>
+<html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>Sagar Bhattarai</title>
+      <title>Sagar Bhattarai - Media Coverage</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!-- <link rel="icon" type="image/png" href="images/logo.png"> -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -24,28 +24,44 @@
    <body>
       <!-- Import header -->
       <div data-include="header"></div>
+
       <div class="container">
-         <div class="row content publications" style="padding-left: 0;">
-            <h3 class="contactTitle text-xs-center">Projects</h3>
-            <ul>
-               <p>
-                  <li>
-                     Large scale production of energy from organic solar cell for the utilization in underwater surveillance, from Indian Institute of Technology Guwahati as Principal Investigator, 
-                     <span class="paper-type-journal">Funding: 19 Lakh INR</span>
-                  </li>
-               </p>
-               <p>
-                  <li>
-                     Development and characterization of CsSnGeI3 based solar cell devices through theoretical and experimental approach, from DST-SERB, Core Research Grant as Co-Principal Investigator, 
-                     <span class="paper-type-journal">Funding: 49 Lakh INR</span>
-                  </li>
-               </p>
-            </ul>
+         <!-- Media Coverage Header -->
+         <div class="media-coverage-header text-xs-center">
+            <h3>MEDIA COVERAGE</h3>
+         </div>
+
+         <!-- Media Coverage List -->
+         <div class="media-coverage-list">
+            <a href="https://www.youtube.com/watch?app=desktop&v=854QCf_DwPU" target="_blank">
+               <i class="fa fa-youtube-play"></i> News Live Coverage
+            </a>
+            <a href="https://www.facebook.com/assamtalkslive/videos/326320497208984/" target="_blank">
+               <i class="fa fa-facebook"></i> ASSAM TALKS LIVE Coverage
+            </a>
+            <a href="https://www.facebook.com/story.php?story_fbid=3837373476540387&id=100008033171309&_rdr" target="_blank">
+               <i class="fa fa-facebook"></i> Facebook Story 1
+            </a>
+            <a href="https://www.facebook.com/?next=https%3A%2F%2Fm.facebook.com%2Fstory.php%3Fstory_fbid%3D3836862793258122%26id%3D100008033171309&_rdr" target="_blank">
+               <i class="fa fa-facebook"></i> Facebook Story 2
+            </a>
+            <a href="https://www.facebook.com/story.php?story_fbid=927490626063008&id=100064062369322&_rdr" target="_blank">
+               <i class="fa fa-facebook"></i> Gorkhali Colours Coverage
+            </a>
+         </div>
+
+         <!-- Social Icons (optional) -->
+         <div class="social-icons text-center">
+            <a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube"></i></a>
+            <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
          </div>
       </div>
+
       <hr>
+
       <!-- Import footer -->
       <div data-include="footer"></div>
+
       <!--Javascriptfile start -->
       <script type="text/javascript" src="js/jquery.min.js"></script>
       <script type="text/javascript" src="js/bootstrap.js"></script>
