--- a/Media_Coverage.html
+++ b/Media_Coverage.html
@@ -20,6 +20,60 @@
          gtag('js', new Date());
          gtag('config', 'UA-131953460-1');
       </script>
+      <style>
+         /* Styling the Media Coverage Section */
+         .media-coverage-header {
+            text-align: center;
+            font-size: 28px;
+            font-weight: bold;
+            padding: 20px 0;
+            color: black;
+         }
+
+         .media-coverage-list {
+            margin: 30px auto;
+            max-width: 900px;
+            padding: 20px;
+         }
+
+         .media-coverage-list ul {
+            list-style-type: none;
+            padding: 0;
+         }
+
+         .media-coverage-list li {
+            margin: 15px 0;
+            font-size: 18px;
+         }
+
+         .media-coverage-list a {
+            color: #007bff;
+            text-decoration: none;
+         }
+
+         .media-coverage-list a:hover {
+            color: #0056b3;
+         }
+
+         .media-coverage-list i {
+            margin-right: 10px;
+            font-size: 20px;
+         }
+
+         /* Add padding between each link */
+         .media-coverage-list li a {
+            display: flex;
+            align-items: center;
+            padding: 10px 0;
+         }
+
+         /* Optional: Add a light border to make the list clearer */
+         .media-coverage-list li a:hover {
+            background-color: #f1f1f1;
+            padding-left: 10px;
+            transition: all 0.3s ease;
+         }
+      </style>
    </head>
    <body>
       <!-- Import header -->
@@ -27,11 +81,12 @@
 
       <div class="container">
          <div class="row content publications" style="padding-left: 0;">
-            <h3 class="contactTitle text-xs-center">Media Coverage</h3>
+            <h3 class="media-coverage-header">Media Coverage</h3>
             
             <!-- Media Coverage List -->
             <div class="media-coverage-list">
                <ul>
+                  <!-- Existing Links -->
                   <li>
                      <a href="https://www.youtube.com/watch?app=desktop&v=854QCf_DwPU" target="_blank">
                         <i class="fa fa-youtube-play"></i> News Live Coverage
@@ -55,6 +110,47 @@
                   <li>
                      <a href="https://www.facebook.com/story.php?story_fbid=927490626063008&id=100064062369322&_rdr" target="_blank">
                         <i class="fa fa-facebook"></i> Gorkhali Colours Coverage
+                     </a>
+                  </li>
+                  <!-- New Links -->
+                  <li>
+                     <a href="https://www.facebook.com/story.php?story_fbid=836845638623001&id=100068927177680&_rdr" target="_blank">
+                        <i class="fa fa-facebook"></i> Facebook Story 3
+                     </a>
+                  </li>
+                  <li>
+                     <a href="https://www.facebook.com/story.php?story_fbid=998054615666530&id=100063860025299&_rdr" target="_blank">
+                        <i class="fa fa-facebook"></i> Facebook Story 4
+                     </a>
+                  </li>
+                  <li>
+                     <a href="https://www.facebook.com/story.php?story_fbid=1017402313467255&id=100055924881499&_rdr" target="_blank">
+                        <i class="fa fa-facebook"></i> Facebook Story 5
+                     </a>
+                  </li>
+                  <li>
+                     <a href="https://www.facebook.com/100089675414571/videos/2472301136294099/" target="_blank">
+                        <i class="fa fa-facebook"></i> Facebook Video 1
+                     </a>
+                  </li>
+                  <li>
+                     <a href="https://www.youtube.com/watch?app=desktop&v=2aXtBtlaHss" target="_blank">
+                        <i class="fa fa-youtube-play"></i> YouTube Video 2
+                     </a>
+                  </li>
+                  <li>
+                     <a href="https://www.facebook.com/61550263392667/videos/414249358359820/" target="_blank">
+                        <i class="fa fa-facebook"></i> Facebook Video 2
+                     </a>
+                  </li>
+                  <li>
+                     <a href="https://www.facebook.com/DY365/videos/1040660197759805/" target="_blank">
+                        <i class="fa fa-facebook"></i> DY365 Facebook Video
+                     </a>
+                  </li>
+                  <li>
+                     <a href="https://www.facebook.com/newsishan/videos/1672076586970844/" target="_blank">
+                        <i class="fa fa-facebook"></i> News Ishan Facebook Video
                      </a>
                   </li>
                </ul>
